fix: alignment of fold indicator in style settings

--- a/source/5-editor/folds_search-matches.css
+++ b/source/5-editor/folds_search-matches.css
@@ -20,18 +20,18 @@ body .markdown-rendered .search-highlight > div.is-active {
 /* ────────────────────────────────────────────────────────────────────────── */
 /* FOLDS */
 
-:is(.style-settings-collapse-indicator, .collapse-icon) > .svg-icon.svg-icon.svg-icon.svg-icon {
+.collapse-icon > .svg-icon.svg-icon.svg-icon.svg-icon {
 	width: 0.75em;
 	height: 0.75em;
-	margin-left: -0.35em;
-	stroke-width: 5px;
+	margin-left: -1em;
+	stroke-width: 4px;
+
+	&:hover {
+		stroke: var(--icon-color-hover);
+	}
 }
 
 :is(.markdown-preview-view, .cm-line:not(.cm-active)) .collapse-icon > .svg-icon.svg-icon,
 body .cm-s-obsidian .is-collapsed ~ .cm-formatting-list {
 	color: var(--text-faint);
-}
-
-:is(.style-settings-collapse-indicator, .collapse-icon) > .svg-icon:hover {
-	stroke: var(--icon-color-hover);
 }
